syntax = 'proto3';
package schedulerobjects;

import "google/protobuf/timestamp.proto";
import "k8s.io/api/core/v1/generated.proto";
import "k8s.io/apimachinery/pkg/api/resource/generated.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// Captures the resource usage of a particular queue
// in a given cluster.
message QueueClusterResourceUsage {
    google.protobuf.Timestamp created = 1 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
    string queue = 2;
    string executorId = 3;
    map<int32, ResourceList> resourcesByPriority = 4;
}

message ResourceList {
    map<string, k8s.io.apimachinery.pkg.api.resource.Quantity> resources = 1 [(gogoproto.nullable) = false];
}

// Minimal job representation used by the scheduler.
message JobSchedulingInfo {
    uint32 lifetime = 1;
    bool atMostOnce = 2;
    bool preemptible = 3;
    bool concurrencySafe = 4;
    // Kubernetes objects that make up this job and their respective scheduling requirements.
    repeated ObjectRequirements objectRequirements = 5;
}

// Message capturing the scheduling requirements of a particular Kubernetes object.
message ObjectRequirements {
    oneof requirements {
        PodRequirements podRequirements = 1;
    }
}

// Captures the scheduling requirements of a pod.
message PodRequirements {
    // Kubernetes node selector.
    map<string, string> nodeSelector = 1;
    // Kubernetes scheduling requirements.
    k8s.io.api.core.v1.Affinity affinity = 2;
    // Kubernetes tolerations.
    repeated k8s.io.api.core.v1.Toleration tolerations = 3 [(gogoproto.nullable) = false];
    // Pod priority. Should be mapped from the priority class name of the submitted pod.
    int32 priority = 4;
    // One of Never, PreemptLowerPriority.
    // Defaults to PreemptLowerPriority if unset.
    string preemptionPolicy = 5;
    // Sum of the resource requirements for all containers that make up this pod.
    k8s.io.api.core.v1.ResourceRequirements resourceRequirements = 6;
}